[gd_scene load_steps=4 format=3 uid="uid://cv1q3iqukxnq8"]

[ext_resource type="Script" uid="uid://ls8vdfvk1b6s" path="res://core/tank/TankGhost.gd" id="1_4f233"]
[ext_resource type="Texture2D" uid="uid://d3g8rbxt1pqde" path="res://icon.svg" id="2_lr3l1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc5c8"]
size = Vector2(120, 120)

[node name="TankGhost" type="Node2D"]
script = ExtResource("1_4f233")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lr3l1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dc5c8")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
